# prnet-infer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap-c.sh  bootstrap.sh  convert_to_onnx.sh  vcsetup.bat
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/lighttransport/prnet_infer_android/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: native-lib.cpp
android/app/src/main/java/com/lighttransport/prnet_infer_android/: MainActivity.kt
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/lighttransport/prnet_infer_android/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
src/: face-data.cc  face-data.h  face_cropper.cc  face_cropper.h  face_frontalizer.cc  face_frontalizer.h  image.h  image_impl.h  main.cc  mesh.h  sh_optimizer.cc  sh_optimizer.h  tf_predictor.cc  tf_predictor.h  ui.cc  ui.h
src/gui/: matrix.cc  render-buffer.h  render-config.h  render.cc  render.h  trackball.cc
src/gui/glfw/: .gitignore  CMakeLists.txt  GLFW.cbp
src/gui/glfw/src/: CMakeLists.txt
src/gui/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_dock.cpp  imgui_dock.h  imgui_draw.cpp  imgui_impl_glfw_gl2.cpp  imgui_internal.h
